Sistema de tiempo y puntajes

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
         <div class="messages">
             <p>Vidas: <span id="lives"></span></p>
+            <p>Tiempo ⌛: <span id="time"></span></p>
         </div>
     </div>
 
