--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
         <div class="messages">
             <p>Vidas: <span id="lives"></span></p>
             <p>Tiempo ⌛: <span id="time"></span></p>
+            <p>Record 💯: <span id="record"></span></p>
+            <p id="result"></p>
         </div>
     </div>
 
