Cambios visuales y bugs fixeados

--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styles.css">
-    <title>Explosive Dumbbell</title>
+    <link rel="shortcut icon" href="./assets/icon/favicon.png">
+    <link rel="stylesheet" href="./css/styles.css">
+    <title>Dragon's Gate Journey</title>
 </head>
 <body>
     <div class="game-container">
@@ -15,6 +16,8 @@
             <button id="left">Izquierda</button>
             <button id="right">Derecha</button>
             <button id="down">Abajo</button>
+
+            <button class="restart">RESTART</button>
         </div>
 
         <div class="messages">
@@ -25,7 +28,7 @@
         </div>
     </div>
 
-    <script src="./maps.js"></script>
-    <script src="./game.js"></script>
+    <script src="./javascript/maps.js"></script>
+    <script src="./javascript/game.js"></script>
 </body>
 </html>
