Modal inicial al cargar la web creado

--- a/index.html
+++ b/index.html
@@ -3,12 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="./assets/icon/favicon.png">
+    <link rel="shortcut icon" href="./assets/icons/favicon.png">
     <link rel="stylesheet" href="./css/styles.css">
     <title>Dragon's Gate Journey</title>
 </head>
 <body>
+    <div class="modal">
+        <button id="close">&times;</button>
+        <h1>¡SELECT YOUR LANGUAGE!</h1>
+        <div id="flags-container">
+            <button type="button" value="en">
+                <img src="./assets/images/uk.png" alt="">
+            </button>
+            <button type="button" value="es">
+                <img src="./assets/images/es.png" alt="">
+            </button>
+        </div>
+        <p></p>
+    </div>
     <div class="game-container">
+        
+
         <canvas id="game"></canvas>
 
         <div class="btns">
