Textos de explicación añadidos en el modal. Feature añadida: boton de ayuda (help) durante la partida

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <button id="close">&times;</button>
         <h1>¡SELECT YOUR LANGUAGE!</h1>
         <div id="flags-container">
-            <button type="button" value="en">
+            <button type="button" value="uk">
                 <img src="./assets/images/uk.png" alt="">
             </button>
             <button type="button" value="es">
@@ -39,10 +39,15 @@
         </div>
 
         <div class="messages">
-            <p>Vidas: <span id="lives"></span></p>
-            <p>Tiempo ⌛: <span id="time"></span></p>
-            <p>Record 🏁: <span id="record"></span></p>
-            <p id="result"></p>
+            <div class="internal-container">
+                <p>Vidas: <span id="lives"></span></p>
+                <p>Tiempo ⌛: <span id="time"></span></p>
+                <p>Record 🏁: <span id="record"></span></p>
+                <p id="result"></p>
+            </div>
+            <button>
+                <!-- <img src="./assets/icons/help.png" alt=""> -->
+            </button>
         </div>
     </div>
 
