Titulo añadido y feature de game lose añadido

--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
         </div>
         <p></p>
     </div>
+
+    <header>
+        <h1>Dragon's Gate Journey</h1>
+    </header>
+
     <div class="game-container">
         
 
