Feature añadido: animacion game lost and game win añadidas

--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
         <canvas id="game"></canvas>
 
         <div class="btns">
-            <button id="up">Arriba</button>
-            <button id="left">Izquierda</button>
-            <button id="right">Derecha</button>
-            <button id="down">Abajo</button>
+            <button id="up"></button>
+            <button id="left"></button>
+            <button id="right"></button>
+            <button id="down"></button>
 
-            <button class="restart">RESTART</button>
+            <button class="restart"></button>
         </div>
 
         <div class="messages">
